[package]
name = "LD51_game"
version = "0.1.0"
edition = "2021"
authors = ["Noah Shomette <https://github.com/NoahShomette>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_rapier2d = "0.16.2"
rand = "0.8.5"
bevy_kira_audio = { version = "0.12.0", features = ["mp3", "wav", "ogg"]}
